app/pattern-scss/_forms.scss
.filters-vertical {
  .form-group {
    padding: $padding-base-vertical * 2 0;
    border-bottom: 1px solid $gray-lighter;
    margin-bottom: 0;

    &.form-group-submit {
      border-bottom: none;
    }
  }
}

label {
  font-weight: normal;
}

// Hidden labels throwing off accessibility
.gform_wrapper .hidden_label .gfield_label {
  background: #fff;
  color: $text-color;
}

.gform_wrapper .gfield_error input,
.gform_wrapper .gfield_error select,
.gform_wrapper .gfield_error textarea {
  color: #a94442;
}

.form-group {
  position: relative;

  .form-control-search-icon {
    position: absolute;
    right: 10px;
    top: 12px;
    color: $gray-light;
  }

  .option-box-label {
    font-weight: bold;
    margin-bottom: 0;
  }

  legend.option-box-label {
    font-size: inherit;
    margin-bottom: 5px;
    border-bottom: 0;
  }

  .checkbox {
    margin: 5px 10px;
  }
}

